Another style change to ensure dropdown component adheres to figma design spacing

--- a/ui.frontend/src/main/webpack/components/form/core-dropdown/v1/dropdown/style.scss
+++ b/ui.frontend/src/main/webpack/components/form/core-dropdown/v1/dropdown/style.scss
@@ -30,6 +30,10 @@ form .layout-container .dropdown .sl-dropdown {
     margin-top: 0 !important;
 }
 
+.sl-segmented-blocks .card form .sl-dropdown {
+    margin-top: 0;
+}
+
 .sl-segmented-blocks .card form .sl-dropdown .sl-helper-text {
     display: unset;
 }
